added --noLib and made imports of builtins explicit

--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "asbuild:untouched": "asc assembly/index.ts -b build/untouched.wasm -t build/untouched.wat --importMemory --sourceMap --validate",
-    "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --importMemory --sourceMap --validate --optimize --noDebug",
+    "asbuild:untouched": "asc assembly/index.ts -b build/untouched.wasm -t build/untouched.wat --importMemory --sourceMap --validate --noLib",
+    "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --importMemory --sourceMap --validate --noLib --optimize --noDebug",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized"
   },
   "author": "Francis Crick <fcrick@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "assemblyscript": "fcrick/assemblyscript#v1"
+    "assemblyscript": "fcrick/assemblyscript#v2"
   },
   "dependencies": {
     "glob": "^7.1.2"
