--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
   "description": "Minimal i32 itoa in web assembly",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "asbuild:untouched": "asc assembly/index.ts -b build/untouched.wasm -t build/untouched.wat --importMemory --sourceMap --validate --noLib",
-    "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --importMemory --sourceMap --validate --noLib --optimize --noDebug",
+    "test": "node tests/index.js",
+    "asbuild:untouched": "asc assembly/index.ts -b build/untouched.wasm -t build/untouched.wat --importMemory --sourceMap --debug --runtime none",
+    "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --importMemory --sourceMap --optimize --runtime none",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized"
   },
   "author": "Francis Crick <fcrick@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "assemblyscript": "fcrick/assemblyscript#v2"
-  },
-  "dependencies": {
-    "glob": "^7.1.2"
+    "assemblyscript": "^0.13.3"
   }
 }
