--- a/assembly/tsconfig.json
+++ b/assembly/tsconfig.json
@@ -2,5 +2,9 @@
     "extends": "../node_modules/assemblyscript/std/assembly.json",
     "include": [
         "./**/*.ts"
-    ]
+    ],
+    "compilerOptions": {
+        "declaration": true,
+        "emitDeclarationOnly": true
+    }
 }
