--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "@fcrick/itoa",
   "version": "1.0.0",
   "description": "Minimal i32 itoa in web assembly",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "type": "module",
   "files": [
-    "build/optimized.wasm",
     "assembly/index.d.ts",
-    "index.js"
+    "lib/index.js",
+    "lib/index.d.ts",
+    "lib/optimized.wasm.js"
   ],
   "scripts": {
-    "test": "node tests/index.js",
+    "test": "node ./lib/tests/index.js",
     "asbuild:untouched": "asc assembly/index.ts -b build/untouched.wasm -t build/untouched.wat --importMemory --sourceMap --debug --runtime none",
     "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --importMemory --sourceMap --optimize --runtime none",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
-    "build": "tsc --build ./assembly/tsconfig.json && npm run asbuild"
+    "build:wasmtobase64": "node -e 'fs.writeFileSync(`./src/optimized.wasm.ts`, `export default Buffer.from(\"${fs.readFileSync(\"./build/optimized.wasm\").toString(\"base64\")}\", \"base64\")`)'",
+    "build:astypes": "tsc --build ./assembly/tsconfig.json",
+    "build:src": "tsc --build ./src/tsconfig.json",
+    "build": "npm run asbuild:optimized && npm run build:wasmtobase64 && npm run build:src && npm run build:astypes"
   },
   "author": "Francis Crick <fcrick@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.0.19",
     "assemblyscript": "^0.13.3",
     "typescript": "^3.9.6"
   }
